--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb2.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">ELECTRIC STACKER</div>
             </a>
           </div>
           <div class="card">
@@ -182,7 +182,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb3.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">TELEHANDLER FORKLIFT</div>
             </a>
           </div>
           <div class="card">
@@ -190,7 +190,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb4.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">EXCAVATOR</div>
             </a>
           </div>
           <div class="card">
@@ -198,7 +198,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb5.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">SITE DUMPER</div>
             </a>
           </div>
           <div class="card">
@@ -206,7 +206,23 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb6.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">SPIDER LIFT</div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="">
+              <div class="card__thumb">
+                <img src="./assets/images/card_thumb7.png" alt="" />
+              </div>
+              <div class="card__title">SCISSOR LIFT</div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="">
+              <div class="card__thumb">
+                <img src="./assets/images/card_thumb8.png" alt="" />
+              </div>
+              <div class="card__title">TELESCOPIC BOOM LIFT</div>
             </a>
           </div>
         </div>
