--- a/equipment.html
+++ b/equipment.html
@@ -153,7 +153,7 @@
         </div>
       </div>
     
-      <div class="tabs container">
+<div class="tabs container">
         <div class="tabs__top flex flex--jcenter">
           <ul class="tabs__nav flex gap--8">
             <li><button class="tabs__nav-item active">All</button></li>
@@ -177,7 +177,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb2.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">ELECTRIC STACKER</div>
             </a>
           </div>
           <div class="card">
@@ -185,7 +185,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb3.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">TELEHANDLER FORKLIFT</div>
             </a>
           </div>
           <div class="card">
@@ -193,7 +193,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb4.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">EXCAVATOR</div>
             </a>
           </div>
           <div class="card">
@@ -201,7 +201,7 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb5.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">SITE DUMPER</div>
             </a>
           </div>
           <div class="card">
@@ -209,11 +209,28 @@
               <div class="card__thumb">
                 <img src="./assets/images/card_thumb6.png" alt="" />
               </div>
-              <div class="card__title">FORKLIFT</div>
+              <div class="card__title">SPIDER LIFT</div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="">
+              <div class="card__thumb">
+                <img src="./assets/images/card_thumb7.png" alt="" />
+              </div>
+              <div class="card__title">SCISSOR LIFT</div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="">
+              <div class="card__thumb">
+                <img src="./assets/images/card_thumb8.png" alt="" />
+              </div>
+              <div class="card__title">TELESCOPIC BOOM LIFT</div>
             </a>
           </div>
         </div>
-      </div></main>
+      </div>
+    </main>
     
     <footer class="footer">
       <div class="container footer__wrapper">
